--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
   background-size: cover;
   position: relative;
   font-family: 'Monaco';
+   touch-action: manipulation;
+
 
 }
 h1{
@@ -97,7 +99,9 @@ h3{
 @media only screen and (max-width: 500px) {
     body { 
         height:310px; 
-        width:300px;  
+        width:300px; 
+                touch-action: manipulation;
+
            
     }
 
