--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,10 @@ h3{
 
            
     }
-.btn-up{
-    width:50px;
-    font-size: 50px;
+    .fa-arrow-up{
+        width: 100px;
+        height: 100px;
+font-size: 50px;
 
 
 }
