--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,22 @@
 body {
-    text-align: center;
-    background-image:     url('../images/sky-game-background-vector-21861325.jpg');
-     height: 100%;
+  text-align: center;
+  background-image:     url('../images/sky-game-background-vector-21861325.jpg');
+  height: 900px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   font-family: 'Monaco';
-   touch-action: manipulation;
-
 
 }
 h1{
 
     font-size: 25px;
     color: #0D47A1;
+    
 }
 h3{
-  color: #0D47A1;
+	color: #0D47A1;
 }
 #myDIV {
   display: none;
@@ -95,19 +94,20 @@ h3{
     color: #02b3e4;
     transition: all 0.5s ease;
 }
-
+.fas{
+    font-size: 36px;
+}
 @media only screen and (max-width: 500px) {
     body { 
         height:310px; 
-        width:300px; 
-                touch-action: manipulation;
-
+        width:300px;  
            
     }
-    .fa-arrow-up{
-        width: 100px;
-        height: 100px;
-font-size: 50px;
 
-
+    .fas{
+        width: 50px;
+        height: 50px;
+        font-size: 50px;
+        display: inline;
+    }
 }
