--- a/css/style.css
+++ b/css/style.css
@@ -106,9 +106,15 @@ body {
   }
   @media only screen and (max-width: 500px) {
       body { 
-          height:310px; 
-          width:300px;  
-             
+        height:310px; 
+        width:300px;  
+        background-image:     url('../images/sky-game-background-vector-21861325.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        font-family: 'Monaco';
+
       }
   
       .fas{
